# story-writer

./: .gitignore  LICENSE  readme.md  requirements.txt  setup.cfg
docs/: demo.ipynb  make_pdf.ipynb  story_building.ipynb
src/story_writer/: __init__.py  _locale.py  _machinery.py  _make_pdf.py  _streamlit_script.py
