[metadata]
name = story-writer
version = attr: story_writer.__version__
description = A AI-based story writer Python library which uses OpenAI's chatGPT and Dall-E to generate PDFs with a story and a picture from a prompt and writes them into a PDF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/story-writer
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/story-writer/issues
    Documentation = https://github.com/haesleinhuepf/story-writer#README.md
    Source Code = https://github.com/haesleinhuepf/story-writer
    User Support = https://github.com/haesleinhuepf/story-writer/issues

[options]
packages = find:
install_requires =
    openai>=1.2.0
    reportlab	
    scikit-image
    numpy

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
